--- a/08-MVC-architecture/package.json
+++ b/08-MVC-architecture/package.json
@@ -13,5 +13,10 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "colors": "^1.4.0",
+    "morgan": "^1.10.0",
+    "nodemon": "^3.1.0"
   }
 }
