--- a/10-REST-API-with-MongoDB/package.json
+++ b/10-REST-API-with-MongoDB/package.json
@@ -18,5 +18,10 @@
     "express": "^4.19.2",
     "mongoose": "^8.3.2",
     "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "colors": "^1.4.0",
+    "morgan": "^1.10.0",
+    "nodemon": "^3.1.0"
   }
 }
