--- a/10-REST-API-with-MongoDB/dotenv.env
+++ b/10-REST-API-with-MongoDB/dotenv.env
@@ -1,3 +1,3 @@
 PORT = 4000
 NODE_ENV = "DEVELOPMENT"
-DB_URL = "mongodb+srv://istiaktusharit:922742ab@cluster0.tywfgfx.mongodb.net/"
+DB_URL = "mongodb+srv://istiaktusharit:922742ab@cluster0.tywfgfx.mongodb.net/userDemoDB"
