--- a/10-REST-API-with-MongoDB/package.json
+++ b/10-REST-API-with-MongoDB/package.json
@@ -2,7 +2,10 @@
   "name": "10-rest-api-with-mongodb",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
